--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
 # Discord Bot Configuration
-DISCORD_BOT_TOKEN=
-DISCORD_CLIENT_ID=
+DISCORD_BOT_TOKEN=your_bot_token_here
+APPLICATION_ID=your_application_id_here
+
+# Bot Settings
+BOT_PREFIX=!
+DEBUG_MODE=false
+AUTO_RESTART=true
 
 # Application Settings
-DEFAULT_PREFIX=!
-AUTO_RESTART=false
+LOG_LEVEL=info
+SAVE_LOGS=true
 
-# Development Settings
-DEV_MODE=true
+# Note: You can find your APPLICATION_ID in the Discord Developer Portal:
+# https://discord.com/developers/applications
+# Select your application and copy the "Application ID"
