idk i did too much tonight
blah

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "electron . --dev",
     "bot": "node src/bot/index.js",
     "test": "jest",
+
     "build": "electron-builder",
+    "clear-commands": "node src/scripts/clear-commands.js",
     "deploy-commands": "node src/bot/deploy-commands.js"
   },
   "author": "",
@@ -21,7 +23,8 @@
     "date-fns": "^2.30.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "vm": "^0.1.0"
   },
   "devDependencies": {
     "electron": "^25.2.0",
@@ -42,17 +45,25 @@
       {
         "from": "src/bot",
         "to": "bot",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
-      "target": ["nsis"]
+      "target": [
+        "nsis"
+      ]
     },
     "mac": {
-      "target": ["dmg"]
+      "target": [
+        "dmg"
+      ]
     },
     "linux": {
-      "target": ["AppImage"]
+      "target": [
+        "AppImage"
+      ]
     }
   }
 }
